--- a/Pokedex/app/src/main/res/values-night/themes.xml
+++ b/Pokedex/app/src/main/res/values-night/themes.xml
@@ -4,11 +4,11 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#FF0000</item>
         <item name="colorPrimaryVariant">#CC0000</item>
-        <item name="colorOnPrimary">#232323</item>
+        <item name="colorOnPrimary">#FFF</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#FFDE00</item>
         <item name="colorSecondaryVariant">#B3A125</item>
-        <item name="colorOnSecondary">#3B4CCA</item>
+        <item name="colorOnSecondary">#3C3C3C</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="fontFamily">@font/kongtext</item>
