fix: corrigidos nomes compostos de pokemons (letra maiúscula no segundo nome, necessidade ou não de -, símbolo de macho e fêmea), centralizados nomes de pokemons nas listas e na activity de detalhes

--- a/Pokedex/app/src/main/res/layout/activity_listas.xml
+++ b/Pokedex/app/src/main/res/layout/activity_listas.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimaryVariant"
             app:tabTextColor="?attr/colorOnSecondary"
+            app:tabMode="scrollable"
             app:tabSelectedTextColor="?attr/colorOnPrimary"
             app:tabIndicatorColor="?attr/colorSecondary"/>
 
