--- a/Pokedex/app/src/main/res/layout/item_pokemon.xml
+++ b/Pokedex/app/src/main/res/layout/item_pokemon.xml
@@ -50,6 +50,7 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:layout_gravity="center" />
 
     </LinearLayout>
