--- a/Pokedex/app/src/main/res/layout/item_pokemon.xml
+++ b/Pokedex/app/src/main/res/layout/item_pokemon.xml
@@ -14,26 +14,32 @@
         android:id="@+id/ll_sprite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:gravity="center"
-        android:layout_weight="2"
         android:orientation="vertical"
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
             android:id="@+id/iv_sprite"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:contentDescription="@string/pokemon" />
 
         <TextView
             android:id="@+id/tv_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_margin="2dp"
             android:textSize="8sp"
             tools:ignore="SmallSp" />
+
+        <ImageView
+            android:id="@+id/iv_gotcha"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_gotcha_disabled"
+            android:contentDescription="@string/pokemon" />
 
     </LinearLayout>
 
@@ -43,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="6"
+        android:layout_weight="8"
         android:orientation="vertical" >
 
         <TextView
@@ -61,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
+        android:gravity="end"
         android:layout_weight="2"
         android:orientation="horizontal" >
 
@@ -116,6 +122,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 </LinearLayout>
